--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
-# =============================================================================
-# DEPRECATION WARNING:
-#
-# The file `requirements.txt` does not influence the package dependencies and
-# will not be automatically created in the next version of PyScaffold (v4.x).
-#
-# Please have look at the docs for better alternatives
-# (`Dependency Management` section).
-# =============================================================================
-#
-# Add your pinned requirements so that they can be easily installed with:
-# pip install -r requirements.txt
-# Remember to also add them in setup.cfg but unpinned.
-# Example:
-# numpy==1.13.3
-# scipy==1.0
-#
+appdirs==1.4.4
+astroid==2.5
+black==20.8b1
+click==7.1.2
+fuzzywuzzy==0.18.0
+isort==5.7.0
+joblib==1.0.1
+lazy-object-proxy==1.5.2
+mccabe==0.6.1
+mypy-extensions==0.4.3
+numpy==1.20.1
+pandas==1.2.2
+pathspec==0.8.1
+pylint==2.7.1
+python-dateutil==2.8.1
+pytz==2021.1
+regex==2020.11.13
+scikit-learn==0.24.1
+scipy==1.6.1
+six==1.15.0
+sklearn==0.0
+threadpoolctl==2.1.0
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+wrapt==1.12.1
